<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/brand_logo" />

        <EditText
            android:id="@+id/signup_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#ffffff"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/textColorSecundary"
            android:textColorHint="@color/colorHint" />

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#ffffff"
            android:hint="@string/hint_mail"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/textColorSecundary"
            android:textColorHint="@color/colorHint" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#ffffff"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/textColorSecundary"
            android:textColorHint="@color/colorHint" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#ffffff" >

            <Spinner
                android:id="@+id/age_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHint"
                android:padding="10dp"
                android:ellipsize="marquee"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#ffffff" >

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHint"
                android:padding="10dp"
                android:ellipsize="marquee"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_consent_title"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_centerInParent="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_consent_text"
            android:textColor="#ffffff"
            android:layout_centerInParent="true"/>


        <!-- Sign Up Button -->

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorPrimaryLight"
            android:text="@string/btn_signup"
            android:textColor="@color/textColorPrimary"
            android:onClick="signupRequest" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:onClick="openLoginSUView"  />
    </LinearLayout>

</LinearLayout>